# Float_torrent

./: LICENSE  README.md
projekt-primer/auxiliary_functions/: Cargo.toml
projekt-primer/auxiliary_functions/src/: lib.rs  sequence.rs
projekt-primer/auxiliary_functions/src/sequence/: shifted.rs  story.rs
projekt-primer/generator/: Cargo.toml  main.py  try.py
projekt-primer/generator/src/: lib.rs  main.rs  sequence.rs
projekt-primer/generator/src/expression/: evaluation.rs
projekt-primer/generator/src/sequence/: arithmetic.rs  combined.rs  constant.rs  models.rs  shifted.rs
projekt-primer/generator_elves/: Cargo.toml
projekt-primer/generator_elves/src/: main.rs
projekt-primer/generator_elves/src/sequence/: linearcombination.rs
projekt-primer/generator_imposter/: Cargo.toml
projekt-primer/generator_imposter/src/: main.rs
projekt-primer/generator_imposter/src/sequence/: arithmetic.rs  models.rs
servers/auxiliary_functions/: .env  Cargo.toml
servers/auxiliary_functions/src/: build.rs  lib.rs  sequence.rs
servers/auxiliary_functions/src/sequence/: ai.rs  shifted.rs  story.rs
servers/generator/: .env  api.py  try.py
servers/generator/src/: main.rs
servers/generator_elves/src/: main.rs
servers/generator_imposter/: Cargo.toml
servers/generator_imposter/src/: main.rs
